[gd_scene load_steps=15 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://sprite-sheet.svg" type="Texture" id=2]
[ext_resource path="res://Areas/AsteroidSurface/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Objects/WaveSpawner2D/WaveSpawner2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/PlayerBase/PlayerBase.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/TowerPlacer/TowerPlacer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Waves/Wave1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Waves/Wave2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/AStarGrid/AStarGrid.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/PathPreview.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/EventsPlayer.gd" type="Script" id=11]

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("WaveSpawner2D:spawn_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("WaveSpawner2D:spawn_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=1]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="AStarGrid" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 0 )

[node name="TowerPlacer" parent="." instance=ExtResource( 6 )]
z_index = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 1, 131072, 23, 1, 65538, 24, 1, 65536, 25, 1, 65536, 26, 1, 2, 27, 3, 0, 28, 3, 0, 29, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 1, 0, 65540, 3, 0, 65541, 3, 0, 65542, 1, 65536, 65543, 1, 65537, 65544, 1, 131073, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 1, 65538, 65550, 1, 65537, 65551, 1, 131073, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 1, 65537, 65563, 1, 0, 65564, 3, 0, 65565, 3, 0, 131072, 1, 65538, 131073, 3, 0, 131074, 3, 0, 131075, 1, 131074, 131076, 3, 0, 131077, 2, 3, 131078, 2, 131072, 131079, 2, 131072, 131080, 2, 131072, 131081, 2, 131072, 131082, 2, 131075, 131083, 2, 131072, 131084, 2, 131072, 131085, 2, 131072, 131086, 2, 131072, 131087, 2, 131072, 131088, 2, 131072, 131089, 2, 131072, 131090, 2, 131075, 131091, 2, 131072, 131092, 2, 131075, 131093, 2, 131072, 131094, 2, 131072, 131095, 2, 131072, 131096, 2, 131072, 131097, 2, 4, 131098, 3, 0, 131099, 1, 131072, 131100, 3, 0, 131101, 3, 0, 196608, 1, 1, 196609, 1, 65537, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 2, 131074, 196614, 1, 1, 196615, 3, 0, 196616, 3, 0, 196617, 1, 65538, 196618, 2, 131074, 196619, 1, 65537, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 2, 131074, 196627, 3, 0, 196628, 2, 131074, 196629, 3, 0, 196630, 1, 0, 196631, 3, 0, 196632, 3, 0, 196633, 2, 131074, 196634, 3, 0, 196635, 1, 2, 196636, 3, 0, 196637, 3, 0, 262144, 3, 0, 262145, 1, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 2, 131074, 262150, 1, 65538, 262151, 1, 65536, 262152, 3, 0, 262153, 3, 0, 262154, 2, 65539, 262155, 2, 131072, 262156, 2, 131072, 262157, 2, 4, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 2, 131074, 262163, 3, 0, 262164, 2, 65539, 262165, 2, 4, 262166, 1, 0, 262167, 3, 0, 262168, 3, 0, 262169, 2, 131074, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 327680, 3, 0, 327681, 1, 2, 327682, 1, 1, 327683, 3, 0, 327684, 3, 0, 327685, 2, 131074, 327686, 3, 0, 327687, 1, 65538, 327688, 3, 0, 327689, 3, 0, 327690, 1, 131072, 327691, 1, 0, 327692, 1, 0, 327693, 2, 131074, 327694, 1, 65537, 327695, 3, 0, 327696, 3, 0, 327697, 2, 3, 327698, 2, 65540, 327699, 3, 0, 327700, 3, 0, 327701, 2, 65539, 327702, 2, 4, 327703, 1, 131074, 327704, 1, 1, 327705, 2, 131074, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 393216, 3, 0, 393217, 1, 131074, 393218, 1, 0, 393219, 3, 0, 393220, 3, 0, 393221, 2, 131074, 393222, 3, 0, 393223, 1, 65538, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 1, 131073, 393229, 2, 65539, 393230, 2, 4, 393231, 3, 0, 393232, 2, 3, 393233, 2, 65540, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 3, 0, 393238, 2, 65539, 393239, 2, 4, 393240, 3, 0, 393241, 2, 131074, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 1, 0, 458755, 3, 0, 458756, 3, 0, 458757, 2, 196611, 458758, 2, 131072, 458759, 2, 4, 458760, 3, 0, 458761, 1, 0, 458762, 3, 0, 458763, 3, 0, 458764, 1, 131073, 458765, 3, 0, 458766, 2, 131074, 458767, 1, 0, 458768, 2, 131074, 458769, 1, 65537, 458770, 1, 131072, 458771, 1, 65536, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 2, 131074, 458776, 3, 0, 458777, 2, 131074, 458778, 3, 0, 458779, 1, 65538, 458780, 3, 0, 458781, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 1, 65538, 524291, 3, 0, 524292, 3, 0, 524293, 2, 131074, 524294, 3, 0, 524295, 2, 65539, 524296, 2, 4, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 2, 65539, 524303, 2, 131072, 524304, 2, 131076, 524305, 2, 131072, 524306, 2, 131072, 524307, 2, 4, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 2, 65539, 524312, 2, 131072, 524313, 2, 196612, 524314, 1, 65537, 524315, 1, 131073, 524316, 3, 0, 524317, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 1, 131073, 589827, 3, 0, 589828, 3, 0, 589829, 2, 131074, 589830, 3, 0, 589831, 3, 0, 589832, 2, 65539, 589833, 2, 131072, 589834, 2, 131072, 589835, 2, 4, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 1, 0, 589840, 1, 131072, 589841, 3, 0, 589842, 1, 65536, 589843, 2, 131074, 589844, 1, 0, 589845, 1, 0, 589846, 1, 131073, 589847, 1, 131072, 589848, 1, 65537, 589849, 2, 131074, 589850, 1, 131072, 589851, 1, 0, 589852, 3, 0, 589853, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 1, 131072, 655363, 3, 0, 655364, 3, 0, 655365, 2, 131074, 655366, 3, 0, 655367, 1, 131074, 655368, 3, 0, 655369, 1, 131073, 655370, 1, 2, 655371, 2, 131074, 655372, 1, 1, 655373, 1, 131073, 655374, 1, 65537, 655375, 1, 0, 655376, 3, 0, 655377, 3, 0, 655378, 1, 131073, 655379, 2, 65539, 655380, 2, 131072, 655381, 2, 131072, 655382, 2, 4, 655383, 1, 131072, 655384, 1, 131072, 655385, 2, 131074, 655386, 1, 65538, 655387, 1, 65537, 655388, 1, 0, 655389, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 1, 0, 720899, 3, 0, 720900, 3, 0, 720901, 2, 131074, 720902, 3, 0, 720903, 1, 131074, 720904, 3, 0, 720905, 1, 0, 720906, 3, 0, 720907, 2, 131074, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 1, 131074, 720915, 1, 65537, 720916, 1, 1, 720917, 1, 131073, 720918, 2, 131074, 720919, 1, 131073, 720920, 1, 0, 720921, 2, 131074, 720922, 1, 0, 720923, 1, 2, 720924, 1, 65537, 720925, 3, 0, 786432, 3, 0, 786433, 1, 65538, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 2, 65539, 786438, 2, 131072, 786439, 2, 131072, 786440, 2, 131072, 786441, 2, 131072, 786442, 2, 131072, 786443, 2, 131076, 786444, 2, 131072, 786445, 2, 131072, 786446, 2, 131072, 786447, 2, 131072, 786448, 2, 131072, 786449, 2, 131072, 786450, 2, 131072, 786451, 2, 131072, 786452, 2, 131072, 786453, 2, 131072, 786454, 2, 131076, 786455, 2, 131072, 786456, 2, 131072, 786457, 2, 65540, 786458, 1, 0, 786459, 3, 0, 786460, 1, 1, 786461, 3, 0, 851968, 3, 0, 851969, 1, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 1, 131072, 851977, 1, 65536, 851978, 1, 65538, 851979, 1, 131073, 851980, 1, 1, 851981, 1, 2, 851982, 1, 2, 851983, 1, 65537, 851984, 1, 0, 851985, 1, 0, 851986, 1, 2, 851987, 1, 65538, 851988, 1, 65537, 851989, 3, 0, 851990, 3, 0, 851991, 1, 65536, 851992, 3, 0, 851993, 3, 0, 851994, 1, 0, 851995, 3, 0, 851996, 1, 131072, 851997, 3, 0, 917504, 3, 0, 917505, 1, 0, 917506, 1, 1, 917507, 3, 0, 917508, 3, 0, 917509, 1, 1, 917510, 1, 2, 917511, 1, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 1, 1, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 983040, 3, 0, 983041, 3, 0, 983042, 1, 2, 983043, 1, 131073, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 1, 0, 983048, 1, 131072, 983049, 1, 65536, 983050, 1, 65538, 983051, 1, 65538, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 1, 131074, 983063, 1, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 1, 65536, 983069, 3, 0, 1048576, 3, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 1, 0, 1048603, 1, 131073, 1048604, 1, 0, 1048605, 3, 0, 1114112, 1, 2, 1114113, 1, 65538, 1114114, 1, 65537, 1114115, 1, 131072, 1114116, 1, 65538, 1114117, 1, 0, 1114118, 1, 65538, 1114119, 1, 131074, 1114120, 1, 65538, 1114121, 1, 131074, 1114122, 1, 65538, 1114123, 1, 65536, 1114124, 1, 131073, 1114125, 1, 131072, 1114126, 1, 131072, 1114127, 1, 2, 1114128, 1, 131072, 1114129, 1, 1, 1114130, 1, 65537, 1114131, 1, 2, 1114132, 1, 131072, 1114133, 1, 65537, 1114134, 1, 65538, 1114135, 1, 2, 1114136, 1, 65537, 1114137, 1, 1, 1114138, 1, 65538, 1114139, 1, 65538, 1114140, 1, 0, 1114141, 1, 131074 )

[node name="PathPreview" parent="." instance=ExtResource( 10 )]

[node name="WaveSpawner2D" parent="." instance=ExtResource( 4 )]
spawn_scene = ExtResource( 7 )

[node name="EventsPlayer" type="AnimationPlayer" parent="."]
anims/00.first-wave = SubResource( 2 )
anims/01.second-wave = SubResource( 3 )
script = ExtResource( 11 )

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( 352, 160 )

[node name="EnemySpawn" type="Sprite" parent="StartPoint"]
rotation = -0.246199
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 319, 192, 65, 65 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StartPoint/EnemySpawn"]
autoplay = "spin"
anims/spin = SubResource( 1 )

[node name="GoalPoint" type="Position2D" parent="."]
position = Vector2( 1632, 800 )

[node name="PlayerBase" parent="GoalPoint" instance=ExtResource( 5 )]
[connection signal="destroyed" from="GoalPoint/PlayerBase" to="." method="_on_PlayerBase_destroyed"]
